--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dicoding.picodiploma.vedoalfarizi.consumervemovie">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.dicoding.picodiploma.vedoalfarizi.vemovie.READ_DATABASE" android:protectionLevel="normal"/>
-    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="com.dicoding.picodiploma.vedoalfarizi.vemovie.READ_DATABASE"
+        android:protectionLevel="normal" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailMovieActivity"/>
+        <activity android:name=".ShowDetailActivity"></activity>
+        <activity android:name=".DetailMovieActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
